--- a/anonphobease-frontend/src/i18n/est.json
+++ b/anonphobease-frontend/src/i18n/est.json
@@ -143,18 +143,34 @@
   "phobiaNames": {
     "AGORAPHOBIA": "Agorafoobia",
     "SOCIAL_PHOBIA": "Sotsiaalfoobia",
-    "ACROPHOBIA": "Kõrgusekartus",
-    "CLAUSTROPHOBIA": "Klaustrofoobia",
-    "ARACHNOPHOBIA": "Arahnofoobia",
-    "OPHIDIOPHOBIA": "Maofoobia",
-    "AEROPHOBIA": "Lennuhirm (aerofoobia)",
-    "TRYPOPHOBIA": "Tripoboobia",
-    "MYSOPHOBIA": "Müsofoobia (mustuse ja pisikute hirm)",
-    "HEMOPHOBIA": "Verehirm (hemofoobia)",
-    "CARCINOPHOBIA": "Vähihirm (kartsinofoobia)",
-    "THANATOPHOBIA": "Surmahirm (tanatofoobia)",
-    "EMETOPHOBIA": "Oksendamise hirm (emetofoobia)",
-    "NYCTOPHOBIA": "Pimedusehirm (nüktofoobia)",
-    "GLOSSOPHOBIA": "Esinemishirm (glossofoobia)"
+    "ACROPHOBIA": "Akrofoobia (hirm kõrguse ees)",
+    "CLAUSTROPHOBIA": "Klaustrofoobia (hirm suletud ruumide ees)",
+    "ARACHNOPHOBIA": "Arahnofoobia (hirm ämblike ees)",
+    "OPHIDIOPHOBIA": "Ophidiofoobia (hirm madude ees)",
+    "CYNOPHOBIA": "Künofoobia (hirm koerte ees)",
+    "AEROPHOBIA": "Aerofoobia (hirm lendamise ees)",
+    "TRYPANOPHOBIA": "Trypanofoobia (hirm süstide ja nõelte ees)",
+    "DENTOPHOBIA": "Dentifoobia (hirm hambaarsti ees)",
+    "NOSOCOMEPHOBIA": "Nosokomefoobia (hirm haiglate ees)",
+    "TOMOPHOBIA": "Tomofoobia (hirm operatsioonide ees)",
+    "MYSOPHOBIA": "Müsofoobia (hirm mikroobide/saastumise ees)",
+    "HEMOPHOBIA": "Hemofoobia (hirm vere ees)",
+    "EMETOPHOBIA": "Emetofoobia (hirm oksendamise ees)",
+    "THANATOPHOBIA": "Thanatofoobia (hirm surma ees)",
+    "CARCINOPHOBIA": "Kartsinofoobia (hirm vähi ees)",
+    "NYCTOPHOBIA": "Nüktofoobia (hirm pimeduse ees)",
+    "GLOSSOPHOBIA": "Glossofoobia (hirm avaliku esinemise ees)",
+    "ASTRAPHOBIA": "Astrafoobia (hirm äikese ja välgu ees)",
+    "AQUAPHOBIA": "Akvafoobia (hirm vee ees)",
+    "THALASSOPHOBIA": "Thalassofoobia (hirm ookeani või sügava vee ees)",
+    "PYROPHOBIA": "Pürofoobia (hirm tule ees)",
+    "COULROPHOBIA": "Koulrofoobia (hirm klounide ees)",
+    "AUTOPHOBIA": "Autofoobia (hirm üksi jäämise ees)",
+    "TOKOPHOBIA": "Tokofoobia (hirm raseduse või sünnituse ees)",
+    "ENTOMOPHOBIA": "Entomofoobia (hirm putukate ees)",
+    "MUSOPHOBIA": "Musofoobia (hirm hiirte või rottide ees)",
+    "ORNITHOPHOBIA": "Ornitofoobia (hirm lindude ees)",
+    "TRYPOPHOBIA": "Trypofoobia"
   }
+
 }
