--- a/anonphobease-frontend/src/i18n/rus.json
+++ b/anonphobease-frontend/src/i18n/rus.json
@@ -135,19 +135,35 @@
   },
   "phobiaNames": {
     "AGORAPHOBIA": "Агорафобия",
-    "SOCIAL_PHOBIA": "Социофобия",
-    "ACROPHOBIA": "Акрофобия (боязнь высоты)",
-    "CLAUSTROPHOBIA": "Клаустрофобия",
-    "ARACHNOPHOBIA": "Арахнофобия",
-    "OPHIDIOPHOBIA": "Боязнь змей (офидиофобия)",
+    "SOCIAL_PHOBIA": "Социальная фобия",
+    "ACROPHOBIA": "Акрофобия (страх высоты)",
+    "CLAUSTROPHOBIA": "Клаустрофобия (замкнутые пространства)",
+    "ARACHNOPHOBIA": "Арахнофобия (страх пауков)",
+    "OPHIDIOPHOBIA": "Офидиофобия (страх змей)",
+    "CYNOPHOBIA": "Кинофобия (страх собак)",
     "AEROPHOBIA": "Аэрофобия (страх полётов)",
-    "TRYPOPHOBIA": "Трипофобия",
-    "MYSOPHOBIA": "Мизофобия (страх грязи и микробов)",
+    "TRYPANOPHOBIA": "Трипанофобия (страх уколов и игл)",
+    "DENTOPHOBIA": "Дентофобия (страх стоматолога)",
+    "NOSOCOMEPHOBIA": "Носокомеофобия (страх больниц)",
+    "TOMOPHOBIA": "Томофобия (страх операций)",
+    "MYSOPHOBIA": "Мизофобия (страх микробов/заражения)",
     "HEMOPHOBIA": "Гемофобия (страх крови)",
-    "CARCINOPHOBIA": "Карцинофобия (страх рака)",
-    "THANATOPHOBIA": "Танатофобия (страх смерти)",
     "EMETOPHOBIA": "Эметофобия (страх рвоты)",
+    "THANATOPHOBIA": "Танатофобия (страх смерти)",
+    "CARCINOPHOBIA": "Карцинофобия (страх рака)",
     "NYCTOPHOBIA": "Никтофобия (страх темноты)",
-    "GLOSSOPHOBIA": "Глоссофобия (страх публичных выступлений)"
+    "GLOSSOPHOBIA": "Глоссофобия (страх публичных выступлений)",
+    "ASTRAPHOBIA": "Астрафобия (страх грома и молнии)",
+    "AQUAPHOBIA": "Аквафобия (страх воды)",
+    "THALASSOPHOBIA": "Талассофобия (страх океана/глубины)",
+    "PYROPHOBIA": "Пирофобия (страх огня)",
+    "COULROPHOBIA": "Коулрофобия (страх клоунов)",
+    "AUTOPHOBIA": "Аутофобия (страх одиночества)",
+    "TOKOPHOBIA": "Токофобия (страх беременности или родов)",
+    "ENTOMOPHOBIA": "Энтомофобия (страх насекомых)",
+    "MUSOPHOBIA": "Мусофобия (страх мышей или крыс)",
+    "ORNITHOPHOBIA": "Орнитофобия (страх птиц)",
+    "TRYPOPHOBIA": "Трипофобия"
   }
+
 }
